RESOLVED FIXED97642
Fix usage of COMPILER() macros
https://bugs.webkit.org/show_bug.cgi?id=97642
Summary Fix usage of COMPILER() macros
Patrick R. Gansterer
Reported 2012-09-26 01:15:49 PDT
Fix usage of COMPILER() macros
Attachments
Patch (4.15 KB, patch)
2012-09-26 01:24 PDT, Patrick R. Gansterer
no flags
Patch (4.23 KB, patch)
2012-09-27 00:09 PDT, Patrick R. Gansterer
no flags
Patrick R. Gansterer
Comment 1 2012-09-26 01:24:36 PDT
Geoffrey Garen
Comment 2 2012-09-26 08:49:33 PDT
Can you explain why you did this?
Patrick R. Gansterer
Comment 3 2012-09-26 08:50:17 PDT
(In reply to comment #2) > Can you explain why you did this? To enable DFG for MSVC compilers in a next step.
Patrick R. Gansterer
Comment 4 2012-09-27 00:09:03 PDT
Geoffrey Garen
Comment 5 2012-09-27 09:36:46 PDT
Comment on attachment 165942 [details] Patch r=me
WebKit Review Bot
Comment 6 2012-09-27 10:08:47 PDT
Comment on attachment 165942 [details] Patch Clearing flags on attachment: 165942 Committed r129774: <http://trac.webkit.org/changeset/129774>
WebKit Review Bot
Comment 7 2012-09-27 10:08:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.