Fix usage of COMPILER() macros https://bugs.webkit.org/show_bug.cgi?id=97642

Reviewed by Geoffrey Garen.

Add COMPILER(GCC) around compiler specific code and remove it from generic code.
This allows us to implement the DFG code for other compilers to in a next step.

* dfg/DFGOperations.cpp:
* jit/HostCallReturnValue.h:


git-svn-id: svn://svn.chromium.org/blink/trunk@129774 bbb929c8-8fbe-4397-9dbb-9b2b20218538